--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     
 </head>
 <body>
+<img src="">
 <div>
-	<h1>Hello, I'm Amel 😎</h1>
+	<h1>Salut, moi c'est Amel 💜</h1>
   <img src="images/Amel.jpg" alt="" width="100">
-  <h3><a href="https://www.aass.fr/club-foot-football-sarcelles-95/" target="_blank" class="button-blue">Sarcelles Football Club</a></h3>
+  <h3><a href="https://www.om.fr/"/ target="_blank" class="button-blue">La meilleure équipe du monde</a></h3>
 </div>
   <!- 1st section -->
   <div>
+    <h1>Ce que j'aime dans la vie !</h1>
   	<p>
     J'aime le football, le chant et la musique.   
   </p>
@@ -39,18 +41,18 @@
 
   <ul id="list-inline">
     <li>
-      <a href="#">
-        <i class="fab fa-github-square"></i>
+      <a href="https://www.instagram.com/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/mynetwork/discover-hub/" target="_blank">
+        <i class="fab fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a href="#">
-        <i class="fab fa-twitter-square"></i>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class="fab fa-medium"></i>
+       <i class="fab fa-snapchat"></i>
       </a>
     </li>
   </ul>
