--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <img src="">
 <div>
 	<h1>Salut, moi c'est Amel 💜</h1>
-  <img src="images/Amel.jpg" alt="" width="100">
+  <img src="images/amel.jpg" alt="" width="100">
   <h3><a href="https://www.om.fr/"/ target="_blank" class="button-blue">La meilleure équipe du monde</a></h3>
 </div>
   <!- 1st section -->
